--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,13 +50,15 @@ dependencies:
   flex_color_scheme: ^8.2.0 #主题管理
   flutter_staggered_grid_view: ^0.7.0 #瀑布流/GridView
   easy_refresh: ^3.4.0 #下拉刷新、上拉加载
-  extended_image: ^10.0.0 #拓展Image,支持缓存
+#  extended_image: ^10.0.0 #拓展Image,支持缓存
+  cached_network_image: ^3.4.1 #图片缓存
   adaptive_dialog: ^2.4.1 #各种弹窗
   fluttertoast: ^8.2.12 #Toast
   lottie: ^3.3.1 #lottie动画
   photo_view: ^0.15.0 #图片浏览
   sticky_headers: ^0.3.0+2 #吸顶
   google_nav_bar: ^5.0.7 #bottom navigation bar
+  flutter_spinkit: ^5.2.1 #各种加载动画
   #视频播放
   media_kit: ^1.2.0
   media_kit_video: ^1.3.0
