--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.7.2'
-          cache: true
+          cache: false
 
       # 打开MAC Desktop支持
       - name: Enable Flutter Desktop
