--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,8 +40,8 @@ jobs:
       - name: Flutter action
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.7.2'
-          cache: false
+          flutter-version: '3.29.2'
+          cache: true
 
       # 打开MAC Desktop支持
       - name: Enable Flutter Desktop
