--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -128,8 +128,8 @@ jobs:
       - name: Upload Release
         uses: softprops/action-gh-release@v1
         with:
-          name: "${{ fromJson(steps.version.outputs.content).version }}"
-          body: "${{ fromJson(steps.version.outputs.content).version_desc }}"
+          name: ${{ fromJson(steps.version.outputs.content).version }}
+          body: ${{ fromJson(steps.version.outputs.content).version_desc }}
           prerelease: ${{ fromJson(steps.version.outputs.content).prerelease }}
           token: ${{ secrets.TOKEN }}
           files: |
