--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -128,17 +128,14 @@ jobs:
       - name: Upload Release
         uses: softprops/action-gh-release@v1
         with:
-          name: ${{ fromJson(steps.version.outputs.content).version }}
-          body: ${{ fromJson(steps.version.outputs.content).version_desc }}
+          name: "${{ fromJson(steps.version.outputs.content).version }}"
+          body: "${{ fromJson(steps.version.outputs.content).version_desc }}"
           prerelease: ${{ fromJson(steps.version.outputs.content).prerelease }}
           token: ${{ secrets.TOKEN }}
           files: |
             build/app/outputs/flutter-apk/app-x86_64-release.apk
             build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
             build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
-#            simple_live_app/build/ios/iphoneos/ios_no_sign.ipa
-#            simple_live_app/build/dist/*/*.dmg
-#            simple_live_app/build/dist/*/*.zip
       #完成
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
