--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,20 +3,20 @@ name: app-build-action
 on:
   push:
     tags:
-      - "v*"
+      - "*"
 jobs:
+  # MACOS 镜像
   build-mac-ios-android:
     runs-on: macos-latest
     permissions:
       contents: write
     steps:
-      #签出代码
-      - uses: actions/checkout@v4
+      # 1.1 签出代码
+      - uses: actions/checkout@v3
         with:
-          ref: master
-
-      #APK签名设置
-      - name: Download Android keystore
+          ref: main
+      # 1.2 写出相关签名
+      - name: Get Android Keystore
         id: android_keystore
         uses: timheuer/base64-to-file@v1.2
         with:
@@ -28,248 +28,135 @@ jobs:
           echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-
-      #设置JAVA环境
-      - uses: actions/setup-java@v4
+      # 1.2 设置JAVA环境
+      - name: Setup JAVA
+        uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
+          distribution: "zulu"
           java-version: "17"
-          cache: 'gradle'
-
-      #设置Flutter
-      - name: Flutter action
+          cache: "gradle"
+      # 1.3 设置Flutter环境
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.29.2'
+          flutter-version: "3.29.x"
           cache: true
-
-      # 打开MAC Desktop支持
       - name: Enable Flutter Desktop
         run: flutter config --enable-macos-desktop
-
-      #更新Flutter的packages
-      - name: Restore packages
+      # 1.4 更新Flutter的packages
+      - name: Restore Packages
         run: flutter pub get
-
-
-      # 安装appdmg npm install -g appdmg
+      # 1.5 安装appdmg npm install -g appdmg
       - name: Install appdmg
         run: npm install -g appdmg
-
-      # 设置flutter_distributor环境
+      # 1.6 设置flutter_distributor环境
       - name: Install flutter_distributor
         run: dart pub global activate flutter_distributor
-
-      #打包APK
+      # 1.7 build APK
       - name: Build APK
-        run: flutter build apk --release --split-per-abi
-
-      #上传APK至Artifacts
-      - name: Upload APK to Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: android
-          path: |
-            build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
-            build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
-            build/app/outputs/flutter-apk/app-x86_64-release.apk
-
-      #打包iOS
-#      - name: Build IPA
-#        run: |
-#          cd simple_live_app
-#          flutter build ios --release --no-codesign
-#
-#      #创建未签名ipa
-#      - name: Create IPA
-#        run: |
-#          cd simple_live_app
-#          mkdir build/ios/iphoneos/Payload
-#          cp -R build/ios/iphoneos/Runner.app build/ios/iphoneos/Payload/Runner.app
-#          cd build/ios/iphoneos/
-#          zip -q -r ios_no_sign.ipa Payload
-#          cd ../../..
-#
-#      #上传IPA至Artifacts
-#      - name: Upload IPA to Artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: ios
-#          path: |
-#            simple_live_app/build/ios/iphoneos/ios_no_sign.ipa
-#
-#      # 打包MAC
-#      - name: Build MacOS
-#        run: |
-#          cd simple_live_app
-#          flutter_distributor package --platform macos --targets dmg,zip --skip-clean
-#
-#      # 上传MAC至Artifacts
-#      - name: Upload MacOS to Artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: mac
-#          path: |
-#            simple_live_app/build/dist/*/*.dmg
-#            simple_live_app/build/dist/*/*.zip
-#
-#      #读取版本信息
-#      - name: Read version
-#        id: version
-#        uses: juliangruber/read-file-action@v1
-#        with:
-#          path: assets/app_version.json
-#      - name: Echo version
-#        run: echo "${{ fromJson(steps.version.outputs.content).version }}"
-#      - name: Echo version content
-#        run: echo "${{ fromJson(steps.version.outputs.content).version_desc }}"
-
-      #上传至Release
+        run: flutter build apk --release
+      # 1.8 build IOS
+      - name: Build IPA
+        run: flutter build ios --release --no-codesign
+      # 1.9 创建一个未签名IPA
+      - name: Create IPA
+        run: |
+          mkdir build/ios/iphoneos/Payload
+          cp -R build/ios/iphoneos/Runner.app build/ios/iphoneos/Payload/Runner.app
+          cd build/ios/iphoneos/
+          zip -q -r ios_no_sign.ipa Payload
+          cd ../../..
+      # 1.10 build MAC ZIP\DMG
+      - name: Build MacOS
+        run: flutter_distributor package --platform macos --targets dmg,zip --skip-clean
+      # 1.11 上传APK\IPA\MAC DMG\ZIP
       - name: Upload Release
         uses: softprops/action-gh-release@v1
         with:
           body_path: document/RELEASE.txt
-          token: ${{ secrets.TOKEN }}
+          token: ${{secrets.TOKEN }}
           files: |
-            build/app/outputs/flutter-apk/app-x86_64-release.apk
-            build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
-            build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
-      #完成
-      - run: echo "🍏 This job's status is ${{ job.status }}."
-
-  # 打包Linux
-#  build-linux:
-#    runs-on: ubuntu-22.04
-#    permissions:
-#      contents: write
-#    steps:
-#      # 签出代码
-#      - uses: actions/checkout@v4
-#        with:
-#          ref: master
-#      # 设置Flutter环境
-#      - name: Setup Flutter
-#        uses: subosito/flutter-action@v2
-#        with:
-#          flutter-version: "3.22.x"
-#          cache: true
-#      # 安装依赖
-#      - name: Update apt-get
-#        run: sudo apt-get update
-#      - name: Install Dependencies
-#        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libmpv-dev mpv
-#      # 打开Linux Desktop支持
-#      - name: Enable Flutter Desktop
-#        run: flutter config --enable-linux-desktop
-#      # 更新Flutter的packages
-#      - name: Restore Packages
-#        run: |
-#          cd simple_live_app
-#          flutter pub get
-#      # 设置flutter_distributor环境
-#      - name: Install flutter_distributor
-#        run: dart pub global activate flutter_distributor
-#      # build Linux ZIP\DMG
-#      - name: Build Linux
-#        run: |
-#          cd simple_live_app
-#          flutter_distributor package --platform linux --targets deb,zip --skip-clean
-#      # 上传Linux包至Artifacts
-#      - name: Upload Linux APP to Artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: linux
-#          path: |
-#            simple_live_app/build/dist/*/*.deb
-#            simple_live_app/build/dist/*/*.zip
-#
-#      # 读取版本信息
-#      - name: Read version
-#        id: version
-#        uses: juliangruber/read-file-action@v1
-#        with:
-#          path: assets/app_version.json
-#      - name: Echo version
-#        run: echo "${{ fromJson(steps.version.outputs.content).version }}"
-#      - name: Echo version content
-#        run: echo "${{ fromJson(steps.version.outputs.content).version_desc }}"
-#
-#      #上传至Release
-#      - name: Upload Release
-#        uses: softprops/action-gh-release@v1
-#        with:
-#          name: "${{ fromJson(steps.version.outputs.content).version }}"
-#          body: "${{ fromJson(steps.version.outputs.content).version_desc }}"
-#          prerelease: ${{ fromJson(steps.version.outputs.content).prerelease }}
-#          token: ${{ secrets.TOKEN }}
-#          files: |
-#            simple_live_app/build/dist/*/*.deb
-#            simple_live_app/build/dist/*/*.zip
-#        #完成
-#      - run: echo "🍏 Linux job's status is ${{ job.status }}."
-
-  # 打包Windows
-#  build-windows:
-#    runs-on: windows-latest
-#    permissions:
-#      contents: write
-#    steps:
-#      # 签出代码
-#      - uses: actions/checkout@v4
-#        with:
-#          ref: master
-#      # 设置Flutter环境
-#      - name: Setup Flutter
-#        uses: subosito/flutter-action@v2
-#        with:
-#          flutter-version: "3.22.x"
-#          cache: true
-#      - name: Enable Flutter Desktop
-#        run: flutter config --enable-windows-desktop
-#      - name: Restore Packages
-#        run: |
-#          cd simple_live_app
-#          flutter pub get
-#      # 设置flutter_distributor环境
-#      - name: Install flutter_distributor
-#        run: dart pub global activate flutter_distributor
-#      # build Windows ZIP\MSIX
-#      - name: Build Windows
-#        run: |
-#          cd simple_live_app
-#          flutter_distributor package --platform windows --targets msix,zip --skip-clean
-#
-#      # 上传Windows至Artifacts
-#      - name: Upload Windows APP to Artifacts
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: windows
-#          path: |
-#            simple_live_app/build/dist/*/*.msix
-#            simple_live_app/build/dist/*/*.zip
-#
-#      # 读取版本信息
-#      - name: Read version
-#        id: version
-#        uses: juliangruber/read-file-action@v1
-#        with:
-#          path: assets/app_version.json
-#      - name: Echo version
-#        run: echo "${{ fromJson(steps.version.outputs.content).version }}"
-#      - name: Echo version content
-#        run: echo "${{ fromJson(steps.version.outputs.content).version_desc }}"
-#
-#      #上传至Release
-#      - name: Upload Release
-#        uses: softprops/action-gh-release@v1
-#        with:
-#          name: "${{ fromJson(steps.version.outputs.content).version }}"
-#          body: "${{ fromJson(steps.version.outputs.content).version_desc }}"
-#          prerelease: ${{ fromJson(steps.version.outputs.content).prerelease }}
-#          token: ${{ secrets.TOKEN }}
-#          files: |
-#            simple_live_app/build/dist/*/*.msix
-#            simple_live_app/build/dist/*/*.zip
-#
-#      #完成
-#      - run: echo "🍏 Windows job's status is ${{ job.status }}."
+            build/app/outputs/flutter-apk/app-release.apk
+            build/ios/iphoneos/ios_no_sign.ipa
+            build/dist/*/*.dmg
+            build/dist/*/*.zip
+        #完成
+      - run: echo "🍏 MacOS job's status is ${{ job.status }}."
+  # Linux 镜像
+  build-linux:
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: write
+    steps:
+      # 2.1 签出代码
+      - uses: actions/checkout@v3
+        with:
+          ref: main
+      # 2.2 设置Flutter环境
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.22.x"
+          cache: true
+      - name: Update apt-get
+        run: sudo apt-get update
+      - name: Install Dependencies
+        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+      - name: Enable Flutter Desktop
+        run: flutter config --enable-linux-desktop
+      - name: Restore Packages
+        run: flutter pub get
+      # 2.3 设置flutter_distributor环境
+      - name: Install flutter_distributor
+        run: dart pub global activate flutter_distributor
+      # 2.4 build Linux ZIP\DMG
+      - name: Build Linux
+        run: flutter_distributor package --platform linux --targets deb,zip --skip-clean
+      # 2.5 上传ZIP\DMG
+      - name: Upload Release
+        uses: softprops/action-gh-release@v1
+        with:
+          body_path: document/RELEASE.txt
+          token: ${{secrets.TOKEN }}
+          files: |
+            build/dist/*/*.deb
+            build/dist/*/*.zip
+        #完成
+      - run: echo "🍏 Linux job's status is ${{ job.status }}."
+  # Windows 镜像
+  build-windows:
+    runs-on: windows-latest
+    permissions:
+      contents: write
+    steps:
+      # 3.1 签出代码
+      - uses: actions/checkout@v3
+        with:
+          ref: main
+      # 3.2 设置Flutter环境
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.22.x"
+          cache: true
+      - name: Enable Flutter Desktop
+        run: flutter config --enable-windows-desktop
+      - name: Restore Packages
+        run: flutter pub get
+      # 3.3 设置flutter_distributor环境
+      - name: Install flutter_distributor
+        run: dart pub global activate flutter_distributor
+      # 3.4 build Windows ZIP\MSIX
+      - name: Build Windows
+        run: flutter_distributor package --platform windows --targets msix,zip --skip-clean
+      # 3.5 上传ZIP\MSIX
+      - name: Upload Release
+        uses: softprops/action-gh-release@v1
+        with:
+          body_path: document/RELEASE.txt
+          token: ${{secrets.TOKEN }}
+          files: |
+            build/dist/*/*.msix
+            build/dist/*/*.zip
+        #完成
+      - run: echo "🍏 Windows job's status is ${{ job.status }}."
