--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -91,7 +91,7 @@ jobs:
       # 2.1 签出代码
       - uses: actions/checkout@v3
         with:
-          ref: main
+          ref: master
       # 2.2 设置Flutter环境
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -132,7 +132,7 @@ jobs:
       # 3.1 签出代码
       - uses: actions/checkout@v3
         with:
-          ref: main
+          ref: master
       # 3.2 设置Flutter环境
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
