--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.29.3"
-          cache: true
+          cache: false
       - name: Enable Flutter Desktop
         run: flutter config --enable-macos-desktop
       # 1.4 更新Flutter的packages
