--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.5 <4.0.0'
+  sdk: ^3.7.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -44,17 +44,17 @@ dependencies:
   hive_flutter: ^1.1.0 #持久化存储
   logger: ^2.5.0 #日志
   intl: ^0.19.0 #国际化
-  flutter_localization: ^0.2.3
+  flutter_localization: ^0.3.2
 
   #Widget
-  flex_color_scheme: ^8.0.0 #主题管理
+  flex_color_scheme: ^8.2.0 #主题管理
   flutter_staggered_grid_view: ^0.7.0 #瀑布流/GridView
   easy_refresh: ^3.4.0 #下拉刷新、上拉加载
-#  extended_image: ^10.0.0 #拓展Image,支持缓存
+  #  extended_image: ^10.0.0 #拓展Image,支持缓存
   cached_network_image: ^3.4.1 #图片缓存
-  adaptive_dialog: ^2.2.0 #各种弹窗
+  adaptive_dialog: ^2.4.1 #各种弹窗
   fluttertoast: ^8.2.12 #Toast
-  lottie: ^3.1.3 #lottie动画
+  lottie: ^3.3.1 #lottie动画
   photo_view: ^0.15.0 #图片浏览
   sticky_headers: ^0.3.0+2 #吸顶
   google_nav_bar: ^5.0.7 #bottom navigation bar
@@ -70,8 +70,8 @@ dependencies:
   share_plus: ^10.1.4 #分享
   path_provider: ^2.1.5 #常用路径
   cross_file: ^0.3.4+2 #跨平台文件
-  flutter_inappwebview: ^5.7.2+3 #WebView
-  permission_handler: ^11.3.1 #权限处理
+  flutter_inappwebview: ^6.1.5 #WebView
+  permission_handler: ^11.4.0 #权限处理
 #  image_gallery_saver: ^2.0.3 #图片保存到相册
 
 
@@ -85,7 +85,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
