--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,9 +63,18 @@ dependencies:
   media_kit: ^1.2.0
   media_kit_video: ^1.3.0
   media_kit_libs_video: ^1.0.5
+  fullscreen_window: ^1.0.3 #全屏
+  wakelock_plus: ^1.3.2 #防止屏幕进入睡眠状态
+  floating: ^6.0.0 #画中画
+  volume_controller: ^3.3.3 #音量控制
+  window_manager: ^0.4.3 #窗口管理
+  #媒体通知
+  audio_video_progress_bar: ^2.0.3 #音频视频进度条
+  font_awesome_flutter: ^10.8.0 #免费的 Font Awesome Icon包
 
   #系统交互
   package_info_plus: ^8.3.0 #包信息
+  device_info_plus: ^11.4.0 #系统信息
   url_launcher: ^6.3.1 #打开链接
   share_plus: ^10.1.4 #分享
   path_provider: ^2.1.5 #常用路径
